--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 jna = "5.13.0"
 jcodec = "0.2.5"
 proguard-gradle = "7.2.2"
+#kotlin = "1.9.0-Beta"
 kotlin = "1.8.21"
 #kotlin = "1.8.255-SNAPSHOT"
 kotlinx-coroutines = "1.7.1"
