--- a/kds/build.gradle
+++ b/kds/build.gradle
@@ -10,7 +10,7 @@ project.ext.props = [
 ]
 
 dependencies {
-    add("commonMainImplementation", "org.jetbrains.kotlinx:atomicfu:${libs.versions.kotlinx.atomicfu.get()}")
+    //add("commonMainImplementation", "org.jetbrains.kotlinx:atomicfu:${libs.versions.kotlinx.atomicfu.get()}")
     //add("commonMainApi", "org.jetbrains.kotlinx:atomicfu:${libs.versions.kotlinx.atomicfu.get()}")
     //add("jvmTestApi", "org.powermock:powermock-mockito-release-full:1.6.4")
     //add("jvmTestApi", "org.fuin:units4j:0.8.4")
@@ -23,6 +23,7 @@ def doGenerateKdsTemplates() {
     korlibs.korge.gradle.generate.TemplateGenerator.synchronizeNew(new File(projectDir, "src/commonMain/kotlin/korlibs/datastructure/Deque.kt"), true, true, true, true, true, true, true, false)
     korlibs.korge.gradle.generate.TemplateGenerator.synchronizeNew(new File(projectDir, "src/commonMain/kotlin/korlibs/datastructure/Array2.kt"), true, true, true, true, true, true, true, true)
     korlibs.korge.gradle.generate.TemplateGenerator.synchronizeNew(new File(projectDir, "src/commonMain/kotlin/korlibs/datastructure/Stack.kt"), false)
+    korlibs.korge.gradle.generate.TemplateGenerator.synchronizeNew(new File(projectDir, "src/commonMain/kotlin/korlibs/datastructure/PriorityQueue.kt"), false)
 }
 
 // Run only with the generate task
