--- a/korte/build.gradle
+++ b/korte/build.gradle
@@ -2,5 +2,5 @@ description = "Template Engine for Multiplatform Kotlin"
 
 dependencies {
     //add("commonMainApi", project(":kds"))
-    add("commonTestApi", libs.kotlinx.coroutines.core)
+    add("commonTestApi", project(":korcoutines"))
 }
