--- a/korinject/build.gradle
+++ b/korinject/build.gradle
@@ -1,5 +1,5 @@
 description = "Asynchronous Injector for Kotlin"
 
 dependencies {
-	add("commonMainApi", libs.kotlinx.coroutines.core)
+	add("commonMainApi", project(":korcoutines"))
 }
