--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ boolean isPropertyTrue(String name) {
 boolean inCI = isPropertyTrue("CI")
 boolean disabledExtraKorgeLibs = isPropertyTrue("DISABLED_EXTRA_KORGE_LIBS")
 
+include(":korcoutines")
 include(":kbignum")
 include(":klock")
 include(":klogger")
