Try to enable wasm

--- a/korcoutines/build.gradle
+++ b/korcoutines/build.gradle
@@ -2,4 +2,5 @@ description = "Link to kotlinx.coroutines and some extensions"
 
 dependencies {
     add("commonMainApi", libs.kotlinx.coroutines.core)
+    add("commonMainApi", libs.kotlinx.atomicfu)
 }
