--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,11 @@ proguard-gradle = "7.2.2"
 #kotlin = "1.9.0-Beta"
 kotlin = "1.8.21"
 #kotlin = "1.8.255-SNAPSHOT"
-kotlinx-coroutines = "1.7.1"
+kotlinx-atomicfu = "0.20.2-wasm0"
+kotlinx-coroutines = "1.7.0-RC-wasm0"
+#kotlinx-atomicfu = "0.18.5-wasm1"
+#kotlinx-coroutines = "1.7.0-Beta-wasm0"
+#kotlinx-coroutines = "1.7.1"
 #kotlinx-coroutines = "1.6.4"
 kotlinx-serialization = "1.5.1"
 kotlinx-benchmark = "0.4.7"
@@ -37,6 +41,7 @@ jcodec-core = { module = "org.jcodec:jcodec", version.ref = "jcodec" }
 proguard-gradle = { module = "com.guardsquare:proguard-gradle", version.ref = "proguard-gradle" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
+kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu-gradle-plugin", version.ref = "kotlinx-atomicfu" }
 android-build-gradle = { module = "com.android.tools.build:gradle", version.ref = "android-build-gradle" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 gradle-publish-plugin = { module = "com.gradle.publish:plugin-publish-plugin", version.ref = "gradle-publish-plugin" }
