--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,16 +2,18 @@
 jna = "5.13.0"
 jcodec = "0.2.5"
 proguard-gradle = "7.2.2"
-kotlin = "1.9.0-dev-6976"
+
 #kotlin = "1.9.0-Beta"
-#kotlin = "1.8.21"
 #kotlin = "1.8.255-SNAPSHOT"
-kotlinx-atomicfu = "0.20.2-wasm0"
-kotlinx-coroutines = "1.7.0-RC-wasm0"
-#kotlinx-atomicfu = "0.18.5-wasm1"
-#kotlinx-coroutines = "1.7.0-Beta-wasm0"
-#kotlinx-coroutines = "1.7.1"
-#kotlinx-coroutines = "1.6.4"
+
+kotlin = "1.8.21"
+kotlinx-coroutines = "1.7.1"
+kotlinx-atomicfu = "0.20.2"
+
+#kotlin = "1.9.0-dev-6976"
+#kotlinx-atomicfu = "0.20.2-wasm0"
+#kotlinx-coroutines = "1.7.0-RC-wasm0"
+
 kotlinx-serialization = "1.5.1"
 kotlinx-benchmark = "0.4.7"
 dokka = "1.8.10"
