WASM support for korgw

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,13 +6,13 @@ proguard-gradle = "7.2.2"
 #kotlin = "1.9.0-Beta"
 #kotlin = "1.8.255-SNAPSHOT"
 
-kotlin = "1.8.21"
-kotlinx-coroutines = "1.7.1"
-kotlinx-atomicfu = "0.20.2"
+#kotlin = "1.8.21"
+#kotlinx-coroutines = "1.7.1"
+#kotlinx-atomicfu = "0.20.2"
 
-#kotlin = "1.9.0-dev-6976"
-#kotlinx-atomicfu = "0.20.2-wasm0"
-#kotlinx-coroutines = "1.7.0-RC-wasm0"
+kotlin = "1.9.0-dev-6976"
+kotlinx-atomicfu = "0.20.2-wasm0"
+kotlinx-coroutines = "1.7.0-RC-wasm0"
 
 kotlinx-serialization = "1.5.1"
 kotlinx-benchmark = "0.4.7"
