--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ proguard-gradle = "7.2.2"
 #kotlin = "1.9.0-Beta"
 #kotlin = "1.8.255-SNAPSHOT"
 
-kotlin = "1.8.21"
+kotlin = "1.9.0-Beta"
 kotlinx-coroutines = "1.7.1"
 kotlinx-atomicfu = "0.20.2"
 
