Disable metal playground for now

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,8 @@ enableKotlinMobileTvos=true
 enableKotlinMobileWatchos=true
 #enableKotlinMobileTvos=false
 #enableKotlinMobileWatchos=false
-enableMetalPlayground=true
+#enableMetalPlayground=true
+enableMetalPlayground=false
 
 # So we have ie. `INCLUDE_KORLIBS_SAMPLES=true ./gradlew :samples:fleks-ecs:runNativeRelease`:
 # * 2gb for gradle daemon (Kotlin/Native linking / optimizations happens here, instead in the kotlin compiler daemon)
