Added TypedResourcesGenerator to generate a typed tree of your src/commonMain/resources including images, sounds and atlases

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation(libs.gradle.publish.plugin)
     implementation(libs.kotlin.gradle.plugin)
     implementation(libs.android.build.gradle)
+    testImplementation("junit:junit:4.13")
 }
 
 Eval.xy(this, this, file("../gradle/repositories.settings.gradle").text)
