--- a/korte/build.gradle
+++ b/korte/build.gradle
@@ -3,4 +3,5 @@ description = "Template Engine for Multiplatform Kotlin"
 dependencies {
     //add("commonMainApi", project(":kds"))
     add("commonTestApi", project(":korcoutines"))
+    add("commonTestApi", libs.kotlinx.coroutines.test)
 }
