Fix korinject suspendTest

--- a/korinject/build.gradle
+++ b/korinject/build.gradle
@@ -2,4 +2,5 @@ description = "Asynchronous Injector for Kotlin"
 
 dependencies {
 	add("commonMainApi", project(":korcoutines"))
+    add("commonTestApi", libs.kotlinx.coroutines.test)
 }
