--- a/e2e-test/buildSrc/settings.gradle
+++ b/e2e-test/buildSrc/settings.gradle
@@ -1,3 +1,6 @@
+pluginManagement {
+    Eval.xy(this, it, file('../../gradle/repositories.settings.gradle').text)
+}
 dependencyResolutionManagement {
     versionCatalogs {
         libs {
