--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -65,8 +65,22 @@ if (System.getenv("FORCED_VERSION") != null) {
 Properties props = new Properties()
 props.load(new StringReader(file("../gradle.properties").text))
 
-String projectVersion = System.getenv("FORCED_VERSION")?.replaceFirst(~"^refs/tags/", "")?.replaceFirst(~"^v", "")?.replaceFirst(~"^w", "")
+String projectVersion = System.getenv("FORCED_VERSION")
+    ?.replaceFirst(~"^refs/tags/", "")
+    ?.replaceFirst(~"^v", "")
+    ?.replaceFirst(~"^w", "")
+    ?.replaceFirst(~"^z", "")
     ?: props.version
+
+if (projectVersion.contains("-only-gradle-plugin-")) {
+    def parts = projectVersion.split("-only-gradle-plugin-")
+    projectVersion = parts.last()
+}
+
+if (System.getenv("FORCED_VERSION") != null) {
+    println(":: FORCED_VERSION=${System.getenv("FORCED_VERSION")}")
+    println(":: projectVersion=$projectVersion")
+}
 
 String realKotlinVersion = System.getenv("FORCED_KOTLIN_VERSION") ?: libs.versions.kotlin.get()
 
