Convert to .kts gradle script for intellisense.

--- a/e2e-test-multi/settings.gradle
+++ b/e2e-test-multi/settings.gradle
@@ -1,5 +1,5 @@
 pluginManagement {
-    Eval.xy(this, it, file('../gradle/repositories.settings.gradle').text)
+    Eval.xy(this, it, file('../gradle/repositories.settings.gradle.kts').text)
 }
 
 //plugins {
