--- a/e2e-test/buildSrc/build.gradle
+++ b/e2e-test/buildSrc/build.gradle
@@ -7,7 +7,7 @@ repositories {
     mavenCentral()
     google()
 }
-Eval.xy(this, this, file("../../gradle/repositories.settings.gradle").text)
+Eval.xy(this, this, file("../../gradle/repositories.settings.gradle.kts").text)
 
 dependencies {
     implementation("com.soywiz.korlibs.korim:korim-jvm:3.0.0")
