--- a/e2e-test/settings.gradle
+++ b/e2e-test/settings.gradle
@@ -1,3 +1,3 @@
 pluginManagement {
-    Eval.xy(this, it, file('../gradle/repositories.settings.gradle').text)
+    Eval.xy(this, it, file('../gradle/repositories.settings.gradle.kts').text)
 }
