Revive Korge screenshot tester with Korge UI. (#1817)
* bring back korge screenshot tester

* Korge screenshot tester with Korge UI.

* Revert grayscale jpg fix for now.

* Revert unnecessary gradle change.

--- a/korge/build.gradle
+++ b/korge/build.gradle
@@ -10,7 +10,8 @@ project.ext.props = [
 ]
 
 dependencies {
-	add("commonMainApi", project(":korgw"))
+    add("commonMainApi", project(":korim"))
+    add("commonMainApi", project(":korgw"))
 	add("commonMainApi", project(":korau"))
 	add("commonMainApi", project(":korinject"))
     commonMainApi(project(":korte"))
