--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -2,9 +2,9 @@ name: TEST
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, 'release/**' ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, 'release/**' ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
