--- a/e2e/e2e-test/buildSrc/settings.gradle
+++ b/e2e/e2e-test/buildSrc/settings.gradle
@@ -1,10 +1,10 @@
 pluginManagement {
-    Eval.xy(this, it, file('../../gradle/repositories.settings.gradle').text)
+    Eval.xy(this, it, file('../../../gradle/repositories.settings.gradle').text)
 }
 dependencyResolutionManagement {
     versionCatalogs {
         libs {
-            from(files("../../gradle/libs.versions.toml"))
+            from(files("../../../gradle/libs.versions.toml"))
         }
     }
 }
