--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -76,18 +76,6 @@ jobs:
       - run: ./gradlew publishTvosX64PublicationToMavenRepository publishTvosArm64PublicationToMavenRepository publishTvosSimulatorArm64PublicationToMavenRepository
         env:
           DISABLE_JAVASCRIPT_TEST: true
-  publish-watchos:
-    runs-on: macos-11
-    needs: [create-staging-repo]
-    env:
-      stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
-    steps:
-      - uses: actions/checkout@v1
-      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
-      - run: ./gradlew checkReleasingMavenCentral
-      - run: ./gradlew publishWatchosX64PublicationToMavenRepository publishWatchosArm64PublicationToMavenRepository publishWatchosSimulatorArm64PublicationToMavenRepository
-        env:
-          DISABLE_JAVASCRIPT_TEST: true
   publish-jvm-multiplatform:
     runs-on: ubuntu-latest
     needs: [create-staging-repo]
@@ -124,7 +112,7 @@ jobs:
 
   publish-finalize:
     runs-on: ubuntu-latest
-    needs: [publish-windows, publish-mac, publish-linux, publish-ios, publish-jvm-multiplatform, publish-js-android, publish-tvos, publish-watchos]
+    needs: [publish-windows, publish-mac, publish-linux, publish-ios, publish-jvm-multiplatform, publish-js-android, publish-tvos]
     env:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
