--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -106,38 +106,6 @@ jobs:
     - { name: Run benchmarks, run: "./gradlew :korge-benchmarks:jvmBenchmark" }
     #- { name: e2e test, uses: GabrielBB/xvfb-action@v1, with: { working-directory: e2e-test, run: ./gradlew checkReferencesJvm --stacktrace } }
 
-  test-coverage:
-    needs: changes
-    if: ${{ needs.changes.outputs.testJvm == 'true' }}
-    timeout-minutes: 240
-    runs-on: ubuntu-latest
-    env:
-      DISABLE_HEADLESS_TEST: true
-      ENABLE_KOVER: true
-    steps:
-      - { uses: actions/checkout@v3 }
-      - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
-      - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
-      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
-      - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
-      - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
-      - { name: Start gradle, run: ./gradlew }
-      #- { name: Kover Merged HTML Reports, run: ./gradlew koverMergedHtmlReport koverMergedXmlReport }
-      #- uses: actions/upload-artifact@v3
-      #  with:
-      #    name: coverage-results
-      #    path: build/reports/kover/merged/html/
-      #- { name: Kover Merged XML Reports, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew koverMergedXmlReport } }
-      - { name: Kover Merged XML Reports, run: ./gradlew --parallel koverMergedXmlReport }
-      - uses: codecov/codecov-action@v3
-        with:
-          files: ./build/reports/kover/merged/xml/report.xml
-          flags: unittests # optional
-          name: codecov-kover # optional
-          fail_ci_if_error: false # optional (default = false)
-          verbose: true # optional (default = false)
-
-
   test-js:
     needs: changes
     if: ${{ needs.changes.outputs.testJs == 'true' }}
@@ -202,39 +170,21 @@ jobs:
     - { name: Start gradle, run: ./gradlew }
     - { name: Run ios simulator tests, run: ./gradlew iosX64Test }
     - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-ios, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
-    - { name: Check compilation of iOS targets, run: ./gradlew publishIosX64PublicationToMavenLocal publishIosArm64PublicationToMavenLocal }
-    - { name: Check compilation of tvOS targets, run: ./gradlew publishTvosArm64PublicationToMavenLocal publishTvosX64PublicationToMavenLocal }
-    #- { name: Check compilation of TvOS targets, run: ./gradlew publishTvosArm64PublicationToMavenLocal publishTvosX64PublicationToMavenLocal publishTvosSimulatorArm64PublicationToMavenLocal }
 
-
-  test-native-linux:
+  test-native-tvos:
     needs: changes
-    if: ${{ needs.changes.outputs.testLinux == 'true' }}
+    if: ${{ needs.changes.outputs.testIos == 'true' }}
     timeout-minutes: 240
-    runs-on: ubuntu-latest
+    runs-on: macos-11
     steps:
-    - { uses: actions/checkout@v3 }
-    - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
-    - uses: denoland/setup-deno@v1
-      with:
-        deno-version: v1.x
-    - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
-    - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
-    - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
-    - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
-    - { name: Start gradle, run: ./gradlew }
-    #- { name: Testing JVM on Linux, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew jvmTest } }
-    - { name: Testing Kotlin/Native Linux, run: ./gradlew linuxX64Test }
-    - { name: Publish gradle plugin and reload agent, run: "./gradlew :korge-gradle-plugin:publishToMavenLocal :korge-reload-agent:publishToMavenLocal" }
-    - { name: Publish X64, run: ./gradlew publishLinuxX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
-    - { name: Stop gradle daemon, run: ./gradlew --stop }
-    - { name: e2e test native, working-directory: e2e/e2e-test, run: ./gradlew checkReferencesNative --stacktrace }
-    - { name: Archive E2E Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: e2e-test-results-linux, retention-days: 21, path: "**/e2e/e2e-test/build/screenshots", if-no-files-found: ignore } }
-    - { name: Testing Linux Arm64 Publishing, run: ./gradlew publishLinuxArm64PublicationToMavenLocal }
-    - { name: Publish JS, run: ./gradlew publishJsPublicationToMavenLocal }
-    - { name: e2e test JS, working-directory: e2e/e2e-test, run: ./gradlew browserReleaseEsbuild --stacktrace }
+      - { uses: actions/checkout@v3 }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
+      - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
+      - { name: Start gradle, run: ./gradlew }
+      - { name: Check compilation of tvOS targets, run: ./gradlew publishTvosArm64PublicationToMavenLocal }
 
-  test-native-macos:
+  test-jvm-macos:
     needs: changes
     if: ${{ needs.changes.outputs.testMacos == 'true' }}
     timeout-minutes: 240
@@ -249,16 +199,12 @@ jobs:
     - { name: Start gradle, run: ./gradlew }
     - { name: Testing JVM on MacosX64, run: ./gradlew jvmTest }
     - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-macos, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
-    - { name: Testing Kotlin/Native MacosX64, run: ./gradlew macosX64Test }
-    - { name: Publish gradle plugin, run: "./gradlew :korge-gradle-plugin:publishToMavenLocal :korge-reload-agent:publishToMavenLocal" }
-    - { name: Publish X64, run: ./gradlew publishMacosX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
-    - { name: e2e test, working-directory: e2e/e2e-test, run: ./gradlew checkReferencesNative --stacktrace }
+    - { name: e2e test, working-directory: e2e/e2e-test, run: ./gradlew checkReferencesJvm --stacktrace }
     - { name: Archive E2E Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: e2e-test-results-macos, retention-days: 21, path: "**/e2e/e2e-test/build/screenshots", if-no-files-found: ignore } }
-    - { name: Publish Arm64, run: ./gradlew publishMacosArm64PublicationToMavenLocal }
     - { name: Publish JS, run: ./gradlew publishJsPublicationToMavenLocal }
     - { name: e2e test JS, working-directory: e2e/e2e-test, run: ./gradlew browserReleaseEsbuild --stacktrace }
 
-  test-native-windows:
+  test-jvm-windows:
     needs: changes
     if: ${{ needs.changes.outputs.testWindows == 'true' }}
     timeout-minutes: 240
@@ -279,10 +225,5 @@ jobs:
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Testing JVM on windows, shell: cmd, run: "CALL gradlew.bat jvmTest", env: { EGL_LOG_LEVEL: debug, LIBGL_DEBUG: verbose, LIBGL_ALWAYS_SOFTWARE: true, MESA_DEBUG: true } }
     - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-windows, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
-    - { name: Testing Kotlin/Native MingwX64Test, shell: cmd, run: CALL gradlew.bat --no-parallel mingwX64Test }
-    - { name: Publish gradle plugin, shell: cmd, run: "CALL gradlew.bat :korge-gradle-plugin:publishToMavenLocal :korge-reload-agent:publishToMavenLocal" }
-    - { name: Publish X64, shell: cmd, run: CALL gradlew.bat publishMingwX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
-    - { name: e2e test, shell: cmd, working-directory: e2e/e2e-test, run: CALL gradlew.bat checkReferencesNative --stacktrace }
+    - { name: e2e test, shell: cmd, working-directory: e2e/e2e-test, run: CALL gradlew.bat checkReferencesJvm --stacktrace }
     - { name: Archive E2E Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: e2e-test-results-windows, retention-days: 21, path: "**/e2e/e2e-test/build/screenshots", if-no-files-found: ignore } }
-    - { name: Publish JS, run: ./gradlew publishJsPublicationToMavenLocal }
-    - { name: e2e test JS, working-directory: e2e/e2e-test, run: ./gradlew browserReleaseEsbuild --stacktrace }
