Adjust how CI is testing

--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -156,35 +156,7 @@ jobs:
           api-level: 21
           script: ./gradlew connectedCheck
 
-
-  test-native-ios:
-    needs: changes
-    if: ${{ needs.changes.outputs.testIos == 'true' }}
-    timeout-minutes: 240
-    runs-on: macos-11
-    steps:
-    - { uses: actions/checkout@v3 }
-    - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
-    - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
-    - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
-    - { name: Start gradle, run: ./gradlew }
-    - { name: Run ios simulator tests, run: ./gradlew iosX64Test }
-    - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-ios, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
-
-  test-native-tvos:
-    needs: changes
-    if: ${{ needs.changes.outputs.testIos == 'true' }}
-    timeout-minutes: 240
-    runs-on: macos-11
-    steps:
-      - { uses: actions/checkout@v3 }
-      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
-      - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
-      - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
-      - { name: Start gradle, run: ./gradlew }
-      - { name: Check compilation of tvOS targets, run: ./gradlew publishTvosArm64PublicationToMavenLocal }
-
-  test-jvm-macos:
+  test-macos:
     needs: changes
     if: ${{ needs.changes.outputs.testMacos == 'true' }}
     timeout-minutes: 240
@@ -199,6 +171,8 @@ jobs:
     - { name: Start gradle, run: ./gradlew }
     - { name: Testing JVM on MacosX64, run: ./gradlew jvmTest }
     - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-macos, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
+    - { name: Run ios simulator tests, run: ./gradlew iosX64Test }
+    - { name: Check compilation of tvOS targets, run: ./gradlew publishTvosArm64PublicationToMavenLocal }
     - { name: e2e test, working-directory: e2e/e2e-test, run: ./gradlew checkReferencesJvm --stacktrace }
     - { name: Archive E2E Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: e2e-test-results-macos, retention-days: 21, path: "**/e2e/e2e-test/build/screenshots", if-no-files-found: ignore } }
     - { name: Publish JS, run: ./gradlew publishJsPublicationToMavenLocal }
