--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -146,12 +146,10 @@ jobs:
       DISABLE_KOTLIN_NATIVE: true
     steps:
       - { uses: actions/checkout@v3 }
+      - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
-      #- { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev }
-      #- { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
       - { name: Start gradle, run: ./gradlew }
-      #- { name: Try building Android, run: ./gradlew publishAndroidPublicationToMavenLocal }
       - name: Run Android Connected Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
