--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -16,6 +16,7 @@ env:
   DISPLAY: ":99"
   JAVA_VERSION: 11
   JAVA_DISTRIBUTION: zulu
+  ENABLE_BENCHMARKS: false
 
 jobs:
   changes:
@@ -82,8 +83,6 @@ jobs:
     if: ${{ needs.changes.outputs.testJvm == 'true' }}
     timeout-minutes: 240
     runs-on: ubuntu-latest
-    env:
-      ENABLE_BENCHMARKS: false
     steps:
     - { uses: actions/checkout@v3 }
     #- { name: Configure local.properties, run: "echo org.gradle.parallel=true >> local.properties && echo org.gradle.workers.max=2 >> local.properties" }
@@ -144,6 +143,7 @@ jobs:
     #runs-on: ubuntu-latest
     env:
       DISABLE_KOTLIN_NATIVE: true
+      DISABLE_SANDBOX: true
     steps:
       - { uses: actions/checkout@v3 }
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
@@ -170,14 +170,9 @@ jobs:
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew }
     - { name: Testing JVM on MacosX64, run: ./gradlew jvmTest }
-    - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-macos, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
-    - { name: Publish maven local, shell: cmd, run: "CALL gradlew.bat publishJvmLocal :korge-gradle-plugin:publishToMavenLocal :korge-reload-agent:publishToMavenLocal" }
-    - { name: e2e test, working-directory: e2e/e2e-test, run: ./gradlew checkReferencesJvm --stacktrace }
-    - { name: Archive E2E Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: e2e-test-results-macos, retention-days: 21, path: "**/e2e/e2e-test/build/screenshots", if-no-files-found: ignore } }
-    - { name: Publish JS, run: ./gradlew publishJsPublicationToMavenLocal }
-    - { name: e2e test JS, working-directory: e2e/e2e-test, run: ./gradlew browserReleaseEsbuild --stacktrace }
     - { name: Run ios simulator tests, run: ./gradlew iosX64Test }
     - { name: Check compilation of tvOS targets, run: ./gradlew publishTvosArm64PublicationToMavenLocal }
+    - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-macos, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
 
   test-jvm-windows:
     needs: changes
@@ -187,6 +182,7 @@ jobs:
     env:
       DISABLE_JAVASCRIPT_TEST: true
       GRADLE_OPTS: -Dorg.gradle.daemon=false -Dkotlin.compiler.execution.strategy=in-process -Dorg.gradle.workers.max=3
+      DISABLE_KOTLIN_NATIVE: true
     steps:
     - { uses: actions/checkout@v3 }
     - uses: denoland/setup-deno@v1
@@ -200,6 +196,3 @@ jobs:
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Testing JVM on windows, shell: cmd, run: "CALL gradlew.bat jvmTest", env: { EGL_LOG_LEVEL: debug, LIBGL_DEBUG: verbose, LIBGL_ALWAYS_SOFTWARE: true, MESA_DEBUG: true } }
     - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-windows, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
-    - { name: Publish maven local, shell: cmd, run: "CALL gradlew.bat publishJvmLocal :korge-gradle-plugin:publishToMavenLocal :korge-reload-agent:publishToMavenLocal" }
-    - { name: e2e test, shell: cmd, working-directory: e2e/e2e-test, run: CALL gradlew.bat checkReferencesJvm --stacktrace }
-    - { name: Archive E2E Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: e2e-test-results-windows, retention-days: 21, path: "**/e2e/e2e-test/build/screenshots", if-no-files-found: ignore } }
