Try to adjust TEST workflow

--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -139,8 +139,8 @@ jobs:
     needs: changes
     if: ${{ needs.changes.outputs.testAndroid == 'true' }}
     timeout-minutes: 240
-    runs-on: macos-11
-    #runs-on: ubuntu-latest
+    #runs-on: macos-11
+    runs-on: ubuntu-latest
     env:
       DISABLE_KOTLIN_NATIVE: true
       DISABLE_SANDBOX: true
@@ -170,9 +170,24 @@ jobs:
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew }
     - { name: Testing JVM on MacosX64, run: ./gradlew jvmTest }
-    - { name: Run ios simulator tests, run: ./gradlew iosX64Test }
-    - { name: Check compilation of tvOS targets, run: ./gradlew publishTvosArm64PublicationToMavenLocal }
     - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-macos, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
+
+  test-ios:
+    needs: changes
+    if: ${{ needs.changes.outputs.testMacos == 'true' }}
+    timeout-minutes: 240
+    runs-on: macos-11
+    #env:
+    #  DISABLE_HEADLESS_TEST: true
+    steps:
+      - { uses: actions/checkout@v3 }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
+      - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
+      - { name: Start gradle, run: ./gradlew }
+      - { name: Run ios simulator tests, run: ./gradlew iosX64Test }
+      - { name: Check compilation of tvOS targets, run: ./gradlew publishTvosArm64PublicationToMavenLocal }
+      - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-macos, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
 
   test-jvm-windows:
     needs: changes
